--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="hero-image" data-aos="fade-left" data-aos-delay="100">
                 <div class="profile-container">
                     <div class="profile-image">
-                        <img src="images/gideon_kibure.jpg" alt="Gideon Joseph Kibure">
+                        <img src="images/gideon_kibure.jpeg" alt="Gideon Joseph Kibure">
                         <div class="floating-dots">
                             <span></span>
                             <span></span>
